src/objects/License_Key__c.object
<CustomObject>
    <description>Object used for storing Neo4J license keys</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>License_Keys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Activation Keys</relationshipLabel>
        <relationshipName>License_Keys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email associated with the license key</description>
        <inlineHelpText>Email associated with the license key</inlineHelpText>
        <label>Key recipient email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Expiration date for the license key</description>
        <inlineHelpText>Expiration date for the license key</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feature_Version__c</fullName>
        <description>Feature version associated with the license key</description>
        <inlineHelpText>Feature version associated with the license key</inlineHelpText>
        <label>Feature Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>*</fullName>
                    <default>true</default>
                    <label>Any Version</label>
                </value>
                <value>
                    <fullName>&lt;1.0</fullName>
                    <isActive>false</isActive>
                    <label>Pre 1.0</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <description>Feature associated with the license key</description>
        <inlineHelpText>Feature associated with the license key</inlineHelpText>
        <label>Product/Feature</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>neo4j-desktop</fullName>
                    <label>Neo4j Desktop</label>
                </value>
                <value>
                    <fullName>neo4j-bloom-server</fullName>
                    <label>Neo4j Bloom Server (Plugin)</label>
                </value>
                <value>
                    <fullName>neo4j-gds</fullName>
                    <label>Neo4j Graph Data Science (GDS)</label>
                </value>
                <value>
                    <fullName>neo4j-bloom</fullName>
                    <isActive>false</isActive>
                    <label>Neo4j Bloom (Desktop app)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>Neo4j License Key</description>
        <inlineHelpText>Neo4j License Key</inlineHelpText>
        <label>Key</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>License_Keys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Active_Days__c</fullName>
        <description>Calculates number of days from the create date to the expiration date</description>
        <formula>Expiration_Date__c - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Active Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity associated with License Key request</description>
        <inlineHelpText>Opportunity associated with License Key request</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>License_Keys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <description>Name of the organization associated with the license key</description>
        <inlineHelpText>Name of the organization associated with the license key</inlineHelpText>
        <label>Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <description>Publisher of the feature</description>
        <inlineHelpText>Publisher of the feature</inlineHelpText>
        <label>Publisher</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>neo4j.com</fullName>
                    <default>true</default>
                    <label>neo4j.com</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Number of user licenses associated with the key</description>
        <inlineHelpText>Number of user licenses associated with the key</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registrant_First_Name__c</fullName>
        <description>Registrant First Name used in email templates</description>
        <formula>IF(NOT(ISBLANK( Lead__c )),
Lead__r.FirstName,
Contact__r.FirstName
)</formula>
        <inlineHelpText>Registrant First Name used in email templates</inlineHelpText>
        <label>Registrant First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registrant__c</fullName>
        <description>Name of the contact associated with the key</description>
        <inlineHelpText>Name of the contact associated with the key</inlineHelpText>
        <label>Registrant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Email__c</fullName>
        <description>Email of the Neo4j sales rep who owns the record</description>
        <formula>IF(NOT(ISBLANK( Lead__c )), 
Lead__r.Owner:User.Email, 
IF(NOT(ISBLANK( Opportunity__c )), 
Opportunity__r.Owner.Email, 
Contact__r.Owner.Email
) 
)</formula>
        <inlineHelpText>Email of the Neo4j sales rep who owns the record</inlineHelpText>
        <label>Sales Rep Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_ID__c</fullName>
        <formula>IF(NOT(ISBLANK( Lead__c )), 
Lead__r.Owner:User.Id, 
IF(NOT(ISBLANK( Opportunity__c )), 
Opportunity__r.Owner.Id, 
Contact__r.Owner.Id 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Name__c</fullName>
        <description>Name of the Neo4j sales rep who owns the record</description>
        <formula>IF(NOT(ISBLANK( Lead__c )),
Lead__r.Owner:User.FirstName &amp; &apos; &apos; &amp; Lead__r.Owner:User.LastName,
IF(NOT(ISBLANK( Opportunity__c )),
Opportunity__r.Owner.FirstName &amp; &apos; &apos; &amp; Opportunity__r.Owner.LastName,
Contact__r.Owner.FirstName &amp; &apos; &apos; &amp; Contact__r.Owner.LastName
)
)</formula>
        <inlineHelpText>Name of the Neo4j sales rep who owns the record</inlineHelpText>
        <label>Sales Rep Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of key requested</description>
        <inlineHelpText>Type of key requested</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trial</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X_Expiration_Date_Formatted__c</fullName>
        <description>Formatted date field used in email templates</description>
        <formula>CASE(MONTH(Expiration_Date__c),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;) &amp; &apos; &apos; &amp; TEXT(DAY(Expiration_Date__c)) &amp; &apos;, &apos; &amp; TEXT(YEAR(Expiration_Date__c))</formula>
        <inlineHelpText>Formatted date field used in email templates</inlineHelpText>
        <label>X_Expiration_Date_Formatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X_Generate_License_Key__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal field for triggering the fetching of new license key from the key server</description>
        <inlineHelpText>Internal field for triggering the fetching of new license key from the key server</inlineHelpText>
        <label>X_Generate_License_Key</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X_Send_License_Key__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field triggers the sending of licensing key to the registrant</description>
        <inlineHelpText>This field triggers the sending of licensing key to the registrant</inlineHelpText>
        <label>X_Send_License_Key</label>
        <type>Checkbox</type>
    </fields>
    <label>Activation Key</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LK-{0000}</displayFormat>
        <label>License Key Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activation Keys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>